<resources>
    <string name="app_name">Seat Plan 2016</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <!--<string name="slide_1_title">Hello Food!</string>-->
    <!--<string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>-->

    <!--<string name="slide_2_title">Movie Tickets</string>-->
    <!--<string name="slide_2_desc">Book movie tickets for your family and friends!</string>-->

    <!--<string name="slide_3_title">Great Discounts</string>-->
    <!--<string name="slide_3_desc">Best discounts on every single service we offer!</string>-->

    <!--<string name="slide_4_title">World Travel</string>-->
    <!--<string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>-->

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="banner_ad_unit_id">use here admob publisher ID if you valid acount with google</string>
    <string name="txt_start_page">Android Quiz Applications Tutorial </string>
    <string name="str_start_now">Start Now</string>
    <string name="str_next">Next</string>
    <string name="str_done">Done</string>
    <string name="str_results">Results</string>
    <string name="str_gotohome">Go to Home</string>
    <string name="str_viewans">View Answer</string>
    <string name="title_activity_display_result">Display Result</string>


    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_share">Share</string>
    <string name="title_activity_picture">Gallery</string>
    <string name="title_activity_aunit">Seat Plan 2016</string>
    <string name="title_activity_bunit">Seat Plan 2016</string>
    <string name="title_activity_cunit">Seat Plan 2016</string>
    <string name="title_activity_dunit">Seat Plan 2016</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_help">Help</string>

</resources>
